%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#e3f2fd', 'primaryTextColor': '#1565c0', 'primaryBorderColor': '#1976d2'}}}%%

classDiagram
    class User {
        -int _id
        -str _username
        -str _password_hash
        -str _role
        -datetime _created_at
        +set_password(plain_password: str) void
        +verify_password(plain_password: str) bool
        +has_access_to_domain(domain: str) bool
        +get_role_display_name() str
        +save() int
        +delete() bool
        +find_by_id(user_id: int)$ User
        +find_by_username(username: str)$ User
        +get_all()$ List~User~
        +to_dict() dict
    }

    class SecurityIncident {
        -int _id
        -str _date
        -str _incident_type
        -str _severity
        -str _status
        -str _description
        -str _reported_by
        +is_critical() bool
        +is_open() bool
        +resolve() void
        +close() void
        +escalate() void
        +get_severity_color() str
        +save() int
        +delete() bool
        +find_by_id(incident_id: int)$ SecurityIncident
        +get_all()$ List~SecurityIncident~
        +get_by_type(incident_type: str)$ List~SecurityIncident~
        +get_open_incidents()$ List~SecurityIncident~
        +get_critical_incidents()$ List~SecurityIncident~
        +count_by_type()$ dict
        +get_phishing_count()$ int
        +to_dict() dict
    }

    class Dataset {
        -int _id
        -str _dataset_name
        -str _category
        -str _source
        -str _last_updated
        -int _record_count
        -float _file_size_mb
        +is_large_dataset() bool
        +get_size_category() str
        +calculate_storage_cost(cost_per_mb: float) float
        +needs_archiving(days_threshold: int) bool
        +get_governance_recommendation() str
        +save() int
        +delete() bool
        +find_by_id(dataset_id: int)$ Dataset
        +get_all()$ List~Dataset~
        +get_by_source(source: str)$ List~Dataset~
        +get_total_storage()$ float
        +get_storage_by_source()$ dict
        +get_top_consumer()$ tuple
        +to_dict() dict
    }

    class ITTicket {
        -int _id
        -str _ticket_id
        -str _priority
        -str _status
        -str _category
        -str _subject
        -str _description
        -str _assigned_to
        -str _created_date
        -str _resolved_date
        +is_high_priority() bool
        +is_open() bool
        +is_waiting() bool
        +resolve() void
        +escalate() void
        +reassign(new_assignee: str) void
        +get_resolution_time_days() int
        +get_age_days() int
        +get_priority_color() str
        +save() int
        +delete() bool
        +find_by_id(db_id: int)$ ITTicket
        +find_by_ticket_id(ticket_id: str)$ ITTicket
        +get_all()$ List~ITTicket~
        +get_by_assignee(assignee: str)$ List~ITTicket~
        +get_waiting_tickets()$ List~ITTicket~
        +get_staff_performance()$ dict
        +get_worst_performer()$ tuple
        +count_waiting_tickets()$ int
        +to_dict() dict
    }

    class DatabaseManager {
        -str db_path
        +connect_database() Connection
        +create_all_tables(conn: Connection) void
    }

    %% Relationships
    User ..> DatabaseManager : uses
    SecurityIncident ..> DatabaseManager : uses
    Dataset ..> DatabaseManager : uses
    ITTicket ..> DatabaseManager : uses

